--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+:root {
+  --purple: #6200ff;
+}
+.text-purple {
+  color: var(--purple);
+}
+.btn-purple {
+  background-color: var(--purple);
+  color: #fff;
+}
+.progress-bar {
+  width: 400px;
+  height: 10px;
+  background-color: white;
+  margin-bottom: 50px;
+}
+.progress-bar div {
+  width: 33.3%;
+  height: 100%;
+  background-color: var(--purple);
+}
